src/test/resources/SemanticAnalysis/negative/ProductionAccess.ls
class A {

  p ("") {
    this.p = 13;
  }

}
